# Meridian

./: .gitignore  README.md  pyproject.toml
api/: app.py  inference.py  timing.py
api/frontend/: index.html  package-lock.json
api/frontend/src/: App.jsx  api.js  index.css
api/frontend/src/components/: HierarchyView.jsx  SearchView.jsx
meridian/: lorentz.py  losses.py  model.py  optim.py  tokenizer.py
meridian/data/: cc3m.py  dataset_download.py  evaluation.py  transforms.py
scripts/: build_index.py  download_models.py  evaluate.py  train.py  visualize.py
