[project]
name = "meridian"
version = "0.1.0"
description = "Meridian is a vision-language representation model built directly on top of standard CLIP (ViT-B/16) backbones. Unlike typical contrastive models that project image and text vectors into a flat, Euclidean vector space, Meridian maps multimodal features onto a continuous hyperbolic manifold (Lorentz manifold)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.136.3",
    "img2dataset>=1.47.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "open-clip-torch>=3.3.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "setuptools>=82.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchcodec>=0.14.0",
    "torchvision>=0.25.0",
    "transformers>=5.10.2",
]
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
geoopt = { git = "https://github.com/geoopt/geoopt.git" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
